--- a/package.json
+++ b/package.json
@@ -2,5 +2,11 @@
   "devDependencies": {
     "cssnano": "^4.1.10",
     "typescript": "^3.5.2"
+  },
+  "dependencies": {
+    "@types/ace": "0.0.42",
+    "@types/marked": "^0.6.5",
+    "@types/p5": "^0.7.3",
+    "jsdom": "^15.1.1"
   }
 }
