--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.5.0",
     "typescript": "^3.5.2"
   },
   "dependencies": {
     "@babel/core": "^7.5.0",
+    "@babel/runtime": "^7.5.2",
+    "@babel/standalone": "^7.5.2",
     "@types/babel-core": "^6.25.6",
+    "@types/source-map": "^0.5.7",
     "babel-core": "^6.26.3",
     "babel-preset-es2015": "^6.24.1",
     "babel-standalone": "^6.26.0",
-    "monaco-editor": "^0.17.1"
+    "monaco-editor": "^0.17.1",
+    "source-map": "^0.7.3"
   }
 }
