--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.5.0",
+    "sass": "^1.22.4",
     "typescript": "^3.5.2"
   },
   "dependencies": {
