--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "@babel/runtime": "^7.5.2",
     "@babel/standalone": "^7.5.2",
     "@types/babel-core": "^6.25.6",
+    "@types/react": "^16.8.23",
+    "@types/react-dom": "^16.8.4",
     "@types/source-map": "^0.5.7",
     "babel-core": "^6.26.3",
     "babel-preset-es2015": "^6.24.1",
     "babel-standalone": "^6.26.0",
     "lodash": "^4.17.14",
     "monaco-editor": "^0.17.1",
-    "source-map": "^0.7.3"
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "source-map": "^0.7.3",
+    "windows": "0.0.8"
   }
 }
