--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.5.0",
+    "parcel": "^1.12.4",
     "sass": "^1.22.4",
     "typescript": "^3.5.2"
   },
@@ -9,13 +10,20 @@
     "@babel/runtime": "^7.5.2",
     "@babel/standalone": "^7.5.2",
     "@types/babel-core": "^6.25.6",
+    "@types/highlightjs": "^9.12.0",
+    "@types/marked": "^0.6.5",
+    "@types/p5": "^0.9.0",
     "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.4",
     "@types/source-map": "^0.5.7",
     "babel-core": "^6.26.3",
     "babel-preset-es2015": "^6.24.1",
     "babel-standalone": "^6.26.0",
+    "express": "^4.17.1",
+    "highlight.js": "^9.15.10",
+    "highlightjs": "^9.12.0",
     "lodash": "^4.17.14",
+    "marked": "^0.7.0",
     "monaco-editor": "^0.17.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
