--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "jsx": "react",
     "module": "ES6",
     "outDir": "./dist",
-    "paths": { "*": [ "@types/*" ] },
+    "paths": { "*": [ "@types/*", "node_modules/@types/*", "node_modules/*"] },
     "target": "es6"
   },
   "include": [
