--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "react-dom": "^16.8.6",
     "source-map": "^0.7.3",
     "windows": "0.0.8"
+  },
+  "scripts": {
+    "build": "node build.js"
   }
 }
