--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lodash": "^4.17.14",
     "marked": "^0.7.0",
     "monaco-editor": "^0.17.1",
+    "parcel-bundler": "^1.12.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "source-map": "^0.7.3",
