--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-standalone": "^6.26.0",
     "express": "^4.17.1",
+    "fs-extra": "^8.1.0",
     "highlight.js": "^9.15.10",
     "highlightjs": "^9.12.0",
     "lodash": "^4.17.14",
