--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@types/highlightjs": "^9.12.0",
     "@types/marked": "^0.6.5",
     "@types/p5": "^0.9.0",
+    "@types/prismjs": "^1.16.0",
     "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.4",
+    "@types/simplebar": "^2.4.2",
     "@types/source-map": "^0.5.7",
     "babel-core": "^6.26.3",
     "babel-preset-es2015": "^6.24.1",
@@ -27,8 +29,10 @@
     "marked": "^0.7.0",
     "monaco-editor": "^0.17.1",
     "parcel-bundler": "^1.12.4",
+    "prismjs": "^1.17.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "simplebar": "^5.0.7",
     "source-map": "^0.7.3",
     "windows": "0.0.8"
   },
